# Cap

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  docker-compose.coolify.env.example  docker-compose.coolify.yml  docker-compose.template.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/: FUNDING.yml
.github/actions/install-desktop-deps/: action.yml
.github/actions/setup-js/: action.yml
.github/workflows/: ci.yml  desktop-release.yml  promote-nightly.yml  publish-chrome-extension.yml  publish-nightly.yml  publish.yml  sync-tests.yml
apps/chrome-extension/: STORE_LISTING.md  camera-permission.html  camera-preview.html  how-it-works.html  offscreen.html  options.html  package.json  playwright.config.ts  popup.html  tailwind.config.cjs  tsconfig.json  uploading.html  vite.config.ts  vite.content-overlay.config.ts  vite.content.config.ts  welcome.html
apps/chrome-extension/e2e/: overlay-ui.spec.ts  recording-upload.spec.ts  webcam-start.spec.ts
apps/chrome-extension/public/: manifest.json
apps/chrome-extension/src/: chrome.d.ts
apps/cli/: Cargo.toml  README.md
apps/cli/skill/cap/: SKILL.md
apps/cli/src/: account.rs  agent_auth.rs  agent_client.rs  agents.rs  analytics.rs  atomic.rs  automation.rs  caps.rs  confirmation.rs  credentials.rs  developers.rs  doctor.rs  guide.rs  jobs.rs  library.rs  main.rs  mcp.rs  notifications.rs  organizations.rs  project.rs  record.rs  screenshot.rs  session.rs  targets.rs  update.rs  upload.rs
apps/cli/src/selftest/: measure.rs  mod.rs  pattern.rs  playback.rs
apps/cli/tests/: cli.rs
apps/desktop/: app.config.ts  package.json  tsconfig.json
apps/desktop/scripts/: prepare.js
apps/desktop/src/: App.tsx  (+5 more)
apps/media-server/: Dockerfile  Dockerfile.standalone
apps/mobile/: README.md  app-store-release.md  app.config.js  eas.json  metro.config.js  package.json  store.config.json
apps/web/: .gitignore  next.config.mjs  package.json  proxy.ts  tsconfig.json  vercel.json  vitest.config.ts
crates/automation/: Cargo.toml
crates/automation/src/: lib.rs  tests.rs  types.rs
crates/camera/: Cargo.toml
crates/camera-effects/: Cargo.toml
crates/editor/: PLAYBACK-FINDINGS.md
crates/project/: mask-effects.json
crates/recording/: Cargo.toml
crates/scap-cpal/: Cargo.toml
scripts/: instant-mode-action-macos.swift  instant-mode-performance-macos.py  instant-mode-performance.md  instant-mode-process-sampler.c  setup.js  verify-recording-pipeline.mjs
(+868 files in other folders)
