[package]
name = "cap"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.38"
cap-project = { path = "../../crates/project" }
cap-recording = { path = "../../crates/recording" }
cap-editor = { path = "../../crates/editor" }
cap-export = { path = "../../crates/export" }
cap-media-info = { path = "../../crates/media-info" }
cap-timestamp = { path = "../../crates/timestamp" }
relative-path = "1.9.3"
cap-automation = { path = "../../crates/automation" }
cap-camera = { path = "../../crates/camera" }
cap-cli-install = { path = "../../crates/cli-install" }
scap-targets = { path = "../../crates/scap-targets" }
serde = { workspace = true }
serde_json = "1.0.133"
tokio = { workspace = true, features = ["io-util", "net", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1.11.1", features = ["v4"] }
ffmpeg = { workspace = true }
reqwest = { version = "0.12.24", features = ["json", "stream"] }
kameo = "0.17.2"
flume = { workspace = true }
futures = { workspace = true }
dirs = "6.0.0"
image = "0.25.2"
chrono = "0.4.31"
base64 = "0.22.1"
keyring = "4.1.5"
open = "5.3.6"
rmcp = { version = "2.2.0", features = ["transport-io"] }
rpassword = "7.5.4"
sha2 = "0.10.9"
toml_edit = "0.23.7"
url = "2.5.7"
tracing.workspace = true
tracing-subscriber = "0.3.19"
cpal = { workspace = true }
winit = "0.30"
softbuffer = "0.4"
workspace-hack = { version = "0.1", path = "../../crates/workspace-hack" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { workspace = true }
scap-screencapturekit = { path = "../../crates/scap-screencapturekit" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
